--- a/Q11a.html
+++ b/Q11a.html
@@ -47,9 +47,7 @@
             por bonecos e cada tipo de interação é representada por
             uma elipse com um nome
         </p>
-        <div class="text-center">
-            PORQUE
-        </div>
+        <p>PORQUE</p>
         <p>
             a UML é um padrão para a modelagem orientada a objetos
             e, assim, os casos de uso e a obtenção de requisitos com
