--- a/Q15a.html
+++ b/Q15a.html
@@ -42,9 +42,7 @@
         <p>
             Com relação ao tema, analise as asserções a seguir.
         </p>
-        <p class="text-center">
-            PORQUE
-        </p>
+        <p>PORQUE</p>
         <p>
             a interface deve ser projetada para atender pessoas
             (capacidades e limitações motoras, neurológicas,
