--- a/Q16a.html
+++ b/Q16a.html
@@ -47,9 +47,7 @@
             componentes de terceiros que facilitem a implementação
             do seu projeto
         </p>
-        <p class="text-center">
-            PORQUE
-        </p>
+        <p>PORQUE</p>
         <p>
             como o código desses componentes está em linguagem
             intermediária, ou seja, independente da arquitetura de um
