--- a/Q17a.html
+++ b/Q17a.html
@@ -32,9 +32,11 @@
             de uma organização.
         </p>
 
-        <p>
-            (BALDAM, R. 2009, ed.2 , p. 25)
-        </p>
+        <i>
+            <p class="text-right">
+                (BALDAM, R. 2009, ed.2 , p. 25)
+            </p>
+        </i>
 
         <p>
             Sabendo disso, a fase da gestão de processos de negócio
