--- a/Q27a.html
+++ b/Q27a.html
@@ -41,7 +41,7 @@
             aspectos gerenciais (planejamento, controle e tomada de
             decisão) ao processo de desenvolvimento de software
         </p>
-        <p class="text-center">PORQUE</p>
+        <p>PORQUE</p>
         <p>
             considera que o processo é composto por várias etapas
             que são executadas de forma sistemática e sequencial.
