--- a/Q30a.html
+++ b/Q30a.html
@@ -36,9 +36,7 @@
             Nas revisões, os produtos de trabalho de um indivíduo ou
             equipe são revisados por técnicos ou gerentes
         </p>
-        <p class="text-center">
-            PORQUE
-        </p>
+        <p>PORQUE</p>
         <p>
             as revisões fornecem informações sobre defeitos,
             aumentando e permitindo o controle da qualidade do
