--- a/Q34a.html
+++ b/Q34a.html
@@ -52,9 +52,7 @@
             identificar oportunidades e transformá-las em diferencial
             competitivo para a empresa
         </p>
-        <p class="text-center">
-            PORQUE
-        </p>
+        <p>PORQUE</p>
         <p>
             permite estabelecer comunicação interna eficaz na
             empresa e convencer o público-alvo externo: fornecedores,
