--- a/Q26a.html
+++ b/Q26a.html
@@ -46,7 +46,7 @@
         <p>
             Tabela - Fases e respectivas dependências e durações
         </p>
-        <img class="img" src="img/imgQ26.PNG" alt="">
+        <img class="img2" src="img/imgQ26.PNG" alt="">
         <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e
                     Gabaritos Enade</a></i></p>
 
