--- a/Q4a.html
+++ b/Q4a.html
@@ -56,9 +56,7 @@
             condições necessárias para a consolidação da democracia
             no Brasil.
         </p>
-        <div class="text-center">
-            PORQUE
-        </div>
+        <p>PORQUE</p>
         <p>
             Por meio da atuação de seus representantes nos Poderes
             Executivos e Legislativo, no decorrer do século XX,
