--- a/Q1a.html
+++ b/Q1a.html
@@ -83,7 +83,7 @@
             </label>
         </p>
 
-        <button class="btn btn-primary font-weight-bold" onclick="correçao1()"> Corrigir </button>
+        <button class="btn btn-primary" onclick="correçao1()"> Corrigir </button>
         <!--<input type="submit" onclick="correçao()" value="Corrigir" class="btn btn-primary" /> -->
         <div id="display"></div>
         <hr>
