logo fatec no rodapé

--- a/Q12a.html
+++ b/Q12a.html
@@ -104,10 +104,34 @@
         </div>
 
         <footer class="text-center">
+            <hr />
+            <br />
             <p>
-                <i>Mais informações sobre o Enade, consultar o site do Enade no link:
-                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
-                </i>
+              <em
+                >Fonte: As questões desse simulado foram obtidas na prova de ADS
+                2011 disponibilizada no site do INEP.</em
+              >
+            </p>
+            <p>
+              <i
+                >Mais informações sobre o Enade, consultar o site no link:
+                <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index">
+                  Enade Inep
+                </a>
+              </i>
+            </p>
+            <p>
+              <a href="http://www.fateccarapicuiba.edu.br/" target="blank"
+                ><img src="img\Fatec.png" alt="Logo da Fatec"
+              /></a>
+    
+              <a href="https://www.cps.sp.gov.br/" target="blank">
+                <img
+                  src="img\cropped-logo-cps.png"
+                  alt="Logo da CPS"
+                  width="93"
+                  height="58"
+              /></a>
             </p>
         </footer>
     </div>
