--- a/resultado.html
+++ b/resultado.html
@@ -33,11 +33,27 @@
         <hr>
         <footer class="text-center">
             <p>
-                <i>Mais informações sobre o Enade, consultar o site do Enade no link:
-                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i>
+              <i
+                >Mais informações sobre o Enade, consultar o site no link:
+                <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index">
+                  Enade Inep
+                </a>
+              </i>
             </p>
-            <p> <i><a target="_blank" href="sobre.html"> Saiba mais sobre o projeto </a></i></p>
-        </footer>
+            <p>
+              <a href="http://www.fateccarapicuiba.edu.br/" target="blank"
+                ><img src="img\Fatec.png" alt="Logo da Fatec"
+              /></a>
+    
+              <a href="https://www.cps.sp.gov.br/" target="blank">
+                <img
+                  src="img\cropped-logo-cps.png"
+                  alt="Logo da CPS"
+                  width="93"
+                  height="58"
+              /></a>
+            </p>
+          </footer>
     </div>
 </body>
 <script>
