--- a/Gabarito.html
+++ b/Gabarito.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <title>Gabarito</title>
@@ -19,7 +20,6 @@
               <tr>  
                 <th scope="col">QUESTÃO</th>
                 <th scope="col">GABARITO</th>
-                <th scope="col">RESPOSTA</th>
               </tr>
             </thead>
             <tbody>
@@ -168,12 +168,42 @@
 
 
         <hr>
-        <a class="btn btn-primary" type="submit" href="Questoes_1.html">Iniciar Novamente</a>
 
-        <a class="btn btn-primary text-white" onclick="abrir('http://enade.inep.gov.br/enade/#!/index')">Pop-UP ENADE</a>
-    
-        <a class="btn btn-primary text-white" href="http://enade.inep.gov.br/enade/#!/index" target="_blank">Link Externo ENADE</a> 
+        <a class="btn btn-primary" type="submit" href="index.html">Página Inicial</a>
 
+        <a class="btn btn-primary" type="submit" href="Q1a.html">Iniciar Simulado</a>
+
+        <footer class="text-center">
+          <hr />
+          <br />
+          <p>
+            <em
+              >Fonte: As questões desse simulado foram obtidas na prova de ADS 2011
+              disponibilizada no site do INEP.</em
+            >
+          </p>
+          <p>
+            <i>
+              >Mais informações sobre o Enade, consultar o site no link:
+              <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index">
+                Enade Inep
+              </a>
+            </i>
+          </p>
+          <p>
+            <a href="http://www.fateccarapicuiba.edu.br/" target="blank"
+              ><img src="img\Fatec.png" alt="Logo da Fatec"
+            /></a>
+        
+            <a href="https://www.cps.sp.gov.br/" target="blank">
+              <img
+                src="img\cropped-logo-cps.png"
+                alt="Logo da CPS"
+                width="93"
+                height="58"
+            /></a>
+          </p>
+        </footer>
         <script>
 
             function abrir(URL) {
