--- a/sobre.html
+++ b/sobre.html
@@ -49,6 +49,15 @@
             <hr>
             <p> <i>Mais informações sobre o Enade, consultar o site do Enade no link: <a target="_blank"
                         href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i></p>
+            <footer>
+                <p style="text-align: center">
+                    <a href="http://www.fateccarapicuiba.edu.br/" target="blank"><img src="img\Fatec.png"
+                            alt="Logo da Fatec" /></a>
+
+                    <a href="https://www.cps.sp.gov.br/" target="blank">
+                        <img src="img\cropped-logo-cps.png" alt="Logo da CPS" width="93" height="58" /></a>
+                </p>
+            </footer>
 </body>
 
 </html>
