--- a/instrucoes.html
+++ b/instrucoes.html
@@ -45,7 +45,7 @@
 
         <a class="btn btn-primary" type="submit" href="index.html">Página Inicial</a>
 
-        <a class="btn btn-primary" type="submit" href="Q1a.html">INICIAR SIMULADO PMI</a>
+        <a class="btn btn-primary" type="submit" href="Q1a.html">Iniciar Simulado</a>
 
         <hr>
 
