--- a/resultado.html
+++ b/resultado.html
@@ -30,6 +30,7 @@
             <br><br>
         </div>
         <a class="btn btn-primary" onclick="limparCache()" type="submit" href="index.html">Retornar para Página Inicial</a>
+        <a class="btn btn-primary" onclick="limparCache()" type="submit" href="Gabarito.html">Acessar Gabarito</a>
         <hr>
         <footer class="text-center">
             <p>
