--- a/Q17a.html
+++ b/Q17a.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<!-- A tag DOCTYPE é a primeira linha do documento HTML. 
+Ele informa ao navegador qual versão de HTML o documento está escrito, para que o navegador saiba o que esperar. -->
+<html lang="PT-BR">
+<!-- O atributo HTML lang é usado para identificar o idioma do conteúdo do texto que será exibido pelo navegador -->
 <head>
+        <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
+    Ele contém informações como a página <title>, links para CSS (se você escolher estilizar seu conteúdo HTML com CSS),
+       e outros metadados (dados sobre o HTML, como o autor, 
+       e palavras-chave importantes que descreva o documento.) -->
     <meta charset="UTF-8">
+        <!-- Este atributo declara a codificação de caracteres do documento. 
+    Se o atributo estiver presente, seu valor deve ser uma correspondência ASCII sem distinção 
+    entre maiúsculas e minúsculas para a string "utf-8", porque UTF-8 é a única codificação válida para documentos HTML5. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+      <!-- links do logo do enade -->
     <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
+      <!-- links para CSS (estilização seu conteúdo HTML com CSS) -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="funçoes.js"> </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -101,17 +112,11 @@
               </i>
             </p>
             <p>
-              <a href="http://www.fateccarapicuiba.edu.br/" target="blank"
-                ><img src="img\Fatec.png" alt="Logo da Fatec"
-              /></a>
+              <a href="http://www.fateccarapicuiba.edu.br/" target="blank"><img src="img\Fatec.png"
+                      alt="Logo da Fatec" /></a>
     
               <a href="https://www.cps.sp.gov.br/" target="blank">
-                <img
-                  src="img\cropped-logo-cps.png"
-                  alt="Logo da CPS"
-                  width="93"
-                  height="58"
-              /></a>
+                  <img src="img\cropped-logo-cps.png" alt="Logo da CPS" width="93" height="58" /></a>
             </p>
         </footer>
     </div>
