--- a/instrucoes.html
+++ b/instrucoes.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
+<!-- A tag DOCTYPE é a primeira linha do documento HTML. 
+Ele informa ao navegador qual versão de HTML o documento está escrito, para que o navegador saiba o que esperar. -->
 <html lang="PT-BR">
-
+<!-- O atributo HTML lang é usado para identificar o idioma do conteúdo do texto que será exibido pelo navegador -->
 <head>
+        <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
+    Ele contém informações como a página <title>, links para CSS (se você escolher estilizar seu conteúdo HTML com CSS),
+       e outros metadados (dados sobre o HTML, como o autor, 
+       e palavras-chave importantes que descreva o documento.) -->
     <meta charset="UTF-8">
+        <!-- Este atributo declara a codificação de caracteres do documento. 
+    Se o atributo estiver presente, seu valor deve ser uma correspondência ASCII sem distinção 
+    entre maiúsculas e minúsculas para a string "utf-8", porque UTF-8 é a única codificação válida para documentos HTML5. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- links do logo do enade -->
     <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
+      <!-- links para CSS (estilização seu conteúdo HTML com CSS) -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- chamada do bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Instruções Simulado</title>
@@ -54,7 +66,7 @@
                 <i>Mais informações sobre o Enade, consultar o site do Enade no link:
                     <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i>
             </p>
-            <p> <i><a target="_blank" href="sobre.html"> Saiba mais sobre o projeto </a></i></p>
+            <p> <i><a href="sobre.html"> Saiba mais sobre o projeto </a></i></p>
         </footer>
 
     </div>
