--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
             "O Exame Nacional de Desempenho dos Estudantes (Enade) avalia o rendimento dos concluintes dos cursos de
             graduação em relação aos conteúdos programáticos previstos nas diretrizes curriculares dos cursos, o
             desenvolvimento de competências e habilidades necessárias ao aprofundamento da formação geral e
-            profissional, e o nível de atualização dos estudantes com relação à realidade brasileira e mundial."" <br>
+            profissional, e o nível de atualização dos estudantes com relação à realidade brasileira e mundial." <br>
             <i>FONTE: <a target="_blank"
                     href="https://www.gov.br/inep/pt-br/areas-de-atuacao/avaliacao-e-exames-educacionais/enade">Enade -
                     Inep</a></i>
