--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
             O que é o "PROJETO PMI"?
         </h2>
         <p>
-            O Projeto de PMI(Programação em Micro Informática), tem como objetivo criar um simulado de questionario
+            O Projeto de PMI(Programação em Microinformática), tem como objetivo criar um simulado de questionario
             baseado em questões do ENADE.
         </p>
         <hr>
