--- a/Q1a.html
+++ b/Q1a.html
@@ -3,20 +3,21 @@
 Ele informa ao navegador qual versão de HTML o documento está escrito, para que o navegador saiba o que esperar. -->
 <html lang="pt-br">
 <!-- O atributo HTML lang é usado para identificar o idioma do conteúdo do texto que será exibido pelo navegador -->
+
 <head>
-            <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
+    <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
     Ele contém informações como a página <title>, links para CSS (se você escolher estilizar seu conteúdo HTML com CSS),
        e outros metadados (dados sobre o HTML, como o autor, 
        e palavras-chave importantes que descreva o documento.) -->
     <meta charset="UTF-8">
-            <!-- Este atributo declara a codificação de caracteres do documento. 
+    <!-- Este atributo declara a codificação de caracteres do documento. 
     Se o atributo estiver presente, seu valor deve ser uma correspondência ASCII sem distinção 
     entre maiúsculas e minúsculas para a string "utf-8", porque UTF-8 é a única codificação válida para documentos HTML5. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- links do logo do enade -->
     <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
-      <!-- importando o sweetalert -->
+    <!-- importando o sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!-- links para CSS (estilização seu conteúdo HTML com CSS) -->
     <link rel="stylesheet" href="css/style.css">
@@ -31,9 +32,10 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     <title>Questão 1</title>
 </head>
 
-<body class="fundo1" onchange="salvarFormulario('q1')" onload="autofill('q1')"><!-- A tag HTML <body> define o conteúdo principal do documento HTML 
+<body class="fundo1" onchange="salvarFormulario('q1')" onload="autofill('q1')">
+    <!-- A tag HTML <body> define o conteúdo principal do documento HTML 
     ou a seção do documento HTML que será diretamente visível em sua página da web. -->
-  <!-- Uma class =(classe)  CSS é um atributo usado para definir um grupo de elementos HTML 
+    <!-- Uma class =(classe)  CSS é um atributo usado para definir um grupo de elementos HTML 
   a fim de aplicar um estilo e formatação exclusivos a esses elementos com CSS.
 
     onchange e onload são descritos para salvar o formulário e suas respectivas respostas e onload autofill para inserção das respostas das questões
@@ -52,7 +54,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
             <h1 class="font-weight-bold corEnade">Site Simulado ENADE</h1>
             <!-- As tags <h1> a <h6> são usadas para definir titulos HTML. 
       <h1> define o cabeçalho mais importante. <h6> define o título menos importante. -->
-      <!--<a class="btn btn-primary font-weight-bold" href="PaginaInicial.html">Página Inicial</a>-->
+            <!--<a class="btn btn-primary font-weight-bold" href="PaginaInicial.html">Página Inicial</a>-->
             <h3>TEMA: Análise e Desenvolvimento de Sistemas - 2011</h3>
         </div>
         <br><br>
@@ -134,29 +136,26 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
         <footer class="text-center">
             <!-- A tag HTML footer é um elemento HTML5 que define um rodapé 
         que geralmente contém informações de copyright ou autor no documento HTML. -->
-            <hr/>
+            <hr />
             <br />
             <p>
-              <em
-                >Fonte: As questões desse simulado foram obtidas na prova de ADS
-                2011 disponibilizada no site do INEP.</em
-              >
+                <em>Fonte: As questões desse simulado foram obtidas na prova de ADS
+                    2011 disponibilizada no site do INEP.</em>
             </p>
             <p>
-              <i
-                >Mais informações sobre o Enade, consultar o site no link:
-                <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index">
-                  Enade Inep
+                <i>Mais informações sobre o Enade, consultar o site no link:
+                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index">
+                        Enade Inep
+                    </a>
+                </i>
+            </p>
+            <p>
+                <a href="http://www.fateccarapicuiba.edu.br/" target="blank">
+                    <img src="img\Fatec.png" alt="Logo da Fatec" />
                 </a>
-              </i>
-            </p>
-            <p>
-            <a href="http://www.fateccarapicuiba.edu.br/" target="blank">
-                <img src="img\Fatec.png" alt="Logo da Fatec" />
-            </a>
-            <a href="https://www.cps.sp.gov.br/" target="blank">
-                <img src="img\cropped-logo-cps.png" alt="Logo da CPS" width="93" height="58" />
-            </a>
+                <a href="https://www.cps.sp.gov.br/" target="blank">
+                    <img src="img\cropped-logo-cps.png" alt="Logo da CPS" width="93" height="58" />
+                </a>
             </p>
         </footer>
     </div>
@@ -169,7 +168,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
         return document.getElementById("correta").value //validar se é correta pelo id
     }
 
-    function getCheckado() {   //validar se estar checkado ou não e atribuir o valor no seccionstorage
+    function getCheckado() { //validar se estar checkado ou não e atribuir o valor no seccionstorage
 
         input = document.querySelectorAll('input')
 
@@ -181,7 +180,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
 
                 return input[c].value
 
-                break  
+                break
             }
         }
     }
@@ -193,8 +192,8 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     function correçao1() {
         if (entrada != undefined) {
 
-            entrada = getCheckado() //
-            correta = getCorreta()  //
+            entrada = getCheckado()
+            correta = getCorreta()
 
             if (entrada == correta) {
                 Swal.fire({
@@ -204,11 +203,11 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
                 }).then(function () {
                     window.location = 'Q2a.html';
                 });  //caso esteja correta retorna sucesso
-               
+
                 setInterval(() => {
                     window.open('Q2a.html', '_self', false)
                 }, 60000)  //timer de contagem para próxima questão
-                ;
+                    ;
             }
             else {
                 Swal.fire({
@@ -224,7 +223,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
             }
         }
         else {
-            inputVazio(); // caso input esteja vazio ele retorna função sinalizando o erro
+            inputVazio(); //caso input esteja vazio ele retorna função sinalizando o erro
         }
     }
 </script>
