--- a/Q5a.html
+++ b/Q5a.html
@@ -3,28 +3,29 @@
 Ele informa ao navegador qual versão de HTML o documento está escrito, para que o navegador saiba o que esperar. -->
 <html lang="PT-BR">
 <!-- O atributo HTML lang é usado para identificar o idioma do conteúdo do texto que será exibido pelo navegador -->
+
 <head>
-        <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
+    <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
     Ele contém informações como a página <title>, links para CSS (se você escolher estilizar seu conteúdo HTML com CSS),
        e outros metadados (dados sobre o HTML, como o autor, 
        e palavras-chave importantes que descreva o documento.) -->
     <meta charset="UTF-8">
-        <!-- Este atributo declara a codificação de caracteres do documento. 
+    <!-- Este atributo declara a codificação de caracteres do documento. 
     Se o atributo estiver presente, seu valor deve ser uma correspondência ASCII sem distinção 
     entre maiúsculas e minúsculas para a string "utf-8", porque UTF-8 é a única codificação válida para documentos HTML5. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- links do logo do enade -->
+    <!-- links do logo do enade -->
     <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
-      <!-- links para CSS (estilização seu conteúdo HTML com CSS) -->
-      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-      <!-- chamada do sweetalert -->
-      <link rel="stylesheet" href="css/style.css">
-      <!-- chamada do css -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-          <!-- chamada do funcoes javascript -->
-      <script src="funçoes.js"> </script>
+    <!-- links para CSS (estilização seu conteúdo HTML com CSS) -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!-- chamada do sweetalert -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- chamada do css -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- chamada do funcoes javascript -->
+    <script src="funçoes.js"> </script>
     <title>Questões 5</title>
 </head>
 
@@ -109,31 +110,22 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
             <hr />
             <br />
             <p>
-              <em
-                >Fonte: As questões desse simulado foram obtidas na prova de ADS
-                2011 disponibilizada no site do INEP.</em
-              >
+                <em>Fonte: As questões desse simulado foram obtidas na prova de ADS
+                    2011 disponibilizada no site do INEP.</em>
             </p>
             <p>
-              <i
-                >Mais informações sobre o Enade, consultar o site no link:
-                <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index">
-                  Enade Inep
-                </a>
-              </i>
+                <i>Mais informações sobre o Enade, consultar o site no link:
+                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index">
+                        Enade Inep
+                    </a>
+                </i>
             </p>
             <p>
-              <a href="http://www.fateccarapicuiba.edu.br/" target="blank"
-                ><img src="img\Fatec.png" alt="Logo da Fatec"
-              /></a>
-    
-              <a href="https://www.cps.sp.gov.br/" target="blank">
-                <img
-                  src="img\cropped-logo-cps.png"
-                  alt="Logo da CPS"
-                  width="93"
-                  height="58"
-              /></a>
+                <a href="http://www.fateccarapicuiba.edu.br/" target="blank"><img src="img\Fatec.png"
+                        alt="Logo da Fatec" /></a>
+
+                <a href="https://www.cps.sp.gov.br/" target="blank">
+                    <img src="img\cropped-logo-cps.png" alt="Logo da CPS" width="93" height="58" /></a>
             </p>
         </footer>
     </div>
@@ -141,10 +133,10 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
 <script>
     function getCorreta() {
 
-        return document.getElementById("correta").value
+        return document.getElementById("correta").value //validar se é correta pelo id
     }
 
-    function getCheckado() {
+    function getCheckado() { //validar se estar checkado ou não e atribuir o valor no seccionstorage
 
         input = document.querySelectorAll('input')
 
@@ -178,10 +170,10 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
                 junho de 2011."`
                 }).then(function () {
                     window.location = 'Q6a.html';
-                });
+                }); //caso esteja correta retorna sucesso
                 setInterval(() => {
                     window.open('Q6a.html', '_self', false)
-                }, 60000);
+                }, 60000); //timer de contagem para próxima questão
             }
 
             else {
@@ -192,14 +184,14 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
                 uma justificativa correta da primeira."`
                 }).then(function () {
                     window.location = 'Q6a.html';
-                });
+                }); //caso esteja errado retorna erro e passa para próxima página
                 setInterval(() => {
                     window.open('Q6a.html', '_self', false)
                 }, 60000);
             }
         }
         else {
-            inputVazio();
+            inputVazio(); //caso input esteja vazio ele retorna função sinalizando o erro
         }
     }
 </script>
