--- a/Q11a.html
+++ b/Q11a.html
@@ -164,7 +164,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao11() {
+    function correçao11() { //correção da questão 11
         if (entrada != undefined) {
 
             entrada = getCheckado()
