--- a/Q12a.html
+++ b/Q12a.html
@@ -165,7 +165,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao12() {
+    function correçao12() { //correção da questão 12
         if (entrada != undefined) {
             entrada = getCheckado()
             correta = getCorreta()
