--- a/Q13a.html
+++ b/Q13a.html
@@ -157,7 +157,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao13() {
+    function correçao13() { //correção da questão 13
         if (entrada != undefined) {
 
             entrada = getCheckado()
