--- a/Q14a.html
+++ b/Q14a.html
@@ -144,7 +144,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao14() {
+    function correçao14() { //correção da questão 14
         if (entrada != undefined) {
 
             entrada = getCheckado()
