--- a/Q15a.html
+++ b/Q15a.html
@@ -171,7 +171,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao15() {
+    function correçao15() { //correção da questão 15
         if (entrada != undefined) {
 
             entrada = getCheckado()
