--- a/Q17a.html
+++ b/Q17a.html
@@ -145,7 +145,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao17() {
+    function correçao17() { //correção da questão 17
         if (entrada != undefined) {
 
             entrada = getCheckado()
