--- a/Q19a.html
+++ b/Q19a.html
@@ -151,7 +151,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao19() {
+    function correçao19() { //correção da questão 19
         if (entrada != undefined) {
 
             entrada = getCheckado()
