--- a/Q1a.html
+++ b/Q1a.html
@@ -189,7 +189,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao1() {
+    function correçao1() { //correção da questão 1
         if (entrada != undefined) {
 
             entrada = getCheckado()
