--- a/Q20a.html
+++ b/Q20a.html
@@ -164,7 +164,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao20() {
+    function correçao20() { //correção da questão 20
         if (entrada != undefined) {
 
             entrada = getCheckado()
