--- a/Q21a.html
+++ b/Q21a.html
@@ -158,7 +158,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao21() {
+    function correçao21() { //correção da questão 21
         if (entrada != undefined) {
 
             entrada = getCheckado()
