--- a/Q2a.html
+++ b/Q2a.html
@@ -179,7 +179,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao2() {
+    function correçao2() { //correção da questão 2
         if (entrada != undefined) {
 
             entrada = getCheckado()
