--- a/Q3a.html
+++ b/Q3a.html
@@ -178,7 +178,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao3() {
+    function correçao3() { //correção da questão 3
         if (entrada != undefined) {
 
             entrada = getCheckado()
