--- a/Q4a.html
+++ b/Q4a.html
@@ -177,7 +177,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao4() {
+    function correçao4() { //correção da questão 4
         if (entrada != undefined) {
             entrada = getCheckado()
             correta = getCorreta()
