--- a/Q5a.html
+++ b/Q5a.html
@@ -156,7 +156,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao5() {
+    function correçao5() { //correção da questão 5
         if (entrada != undefined) {
 
             entrada = getCheckado()
