--- a/Q6a.html
+++ b/Q6a.html
@@ -149,7 +149,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao6() {
+    function correçao6() { //correção da questão 6
         if (entrada != undefined) {
 
             entrada = getCheckado()
