--- a/Q8a.html
+++ b/Q8a.html
@@ -175,7 +175,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao8() {
+    function correçao8() { //correção da questão 8
         if (entrada != undefined) {
             entrada = getCheckado()
             correta = getCorreta()
