--- a/Q9a.html
+++ b/Q9a.html
@@ -163,7 +163,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao9() {
+    function correçao9() { //correção da questão 9
         if (entrada != undefined) {
             entrada = getCheckado()
             correta = getCorreta()
