--- a/instrucoes.html
+++ b/instrucoes.html
@@ -3,20 +3,21 @@
 Ele informa ao navegador qual versão de HTML o documento está escrito, para que o navegador saiba o que esperar. -->
 <html lang="PT-BR">
 <!-- O atributo HTML lang é usado para identificar o idioma do conteúdo do texto que será exibido pelo navegador -->
+
 <head>
-        <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
+    <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
     Ele contém informações como a página <title>, links para CSS (se você escolher estilizar seu conteúdo HTML com CSS),
        e outros metadados (dados sobre o HTML, como o autor, 
        e palavras-chave importantes que descreva o documento.) -->
     <meta charset="UTF-8">
-        <!-- Este atributo declara a codificação de caracteres do documento. 
+    <!-- Este atributo declara a codificação de caracteres do documento. 
     Se o atributo estiver presente, seu valor deve ser uma correspondência ASCII sem distinção 
     entre maiúsculas e minúsculas para a string "utf-8", porque UTF-8 é a única codificação válida para documentos HTML5. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- links do logo do enade -->
+    <!-- links do logo do enade -->
     <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
-      <!-- links para CSS (estilização seu conteúdo HTML com CSS) -->
+    <!-- links para CSS (estilização seu conteúdo HTML com CSS) -->
     <link rel="stylesheet" href="css/style.css">
     <!-- chamada do bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -27,7 +28,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
 <body class="fundo1">
     <div class="container mt-4 text-center">
         <h1 class="corEnade">Página de Instruções para o Simulado Enade</h1>
-        <br>
+        <br> <!-- A tag <br> no documento HTML é usada para criar uma quebra de linha em um texto. -->
         <h3 class="">Como responder?</h3>
         <p>Leia com atenção cada enunciado e responda a questão de acordo com seu conhecimento e as informações passadas
             em cada enunciado, e clique na opção desejada para salvar sua resposta, e no canto inferior direito, clique
