--- a/sobre.html
+++ b/sobre.html
@@ -3,20 +3,21 @@
 Ele informa ao navegador qual versão de HTML o documento está escrito, para que o navegador saiba o que esperar. -->
 <html lang="PT-BR">
 <!-- O atributo HTML lang é usado para identificar o idioma do conteúdo do texto que será exibido pelo navegador -->
+
 <head>
-        <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
+    <!-- head é a parte que não é exibida no navegador da Web quando a página é carregada. 
     Ele contém informações como a página <title>, links para CSS (se você escolher estilizar seu conteúdo HTML com CSS),
        e outros metadados (dados sobre o HTML, como o autor, 
        e palavras-chave importantes que descreva o documento.) -->
     <meta charset="UTF-8">
-        <!-- Este atributo declara a codificação de caracteres do documento. 
+    <!-- Este atributo declara a codificação de caracteres do documento. 
     Se o atributo estiver presente, seu valor deve ser uma correspondência ASCII sem distinção 
     entre maiúsculas e minúsculas para a string "utf-8", porque UTF-8 é a única codificação válida para documentos HTML5. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- links do logo do enade -->
+    <!-- links do logo do enade -->
     <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
-      <!-- links para CSS (estilização seu conteúdo HTML com CSS) -->
+    <!-- links para CSS (estilização seu conteúdo HTML com CSS) -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -24,10 +25,16 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
 </head>
 
 <body class="fundo1">
+    <!-- A tag HTML <body> define o conteúdo principal do documento HTML 
+    ou a seção do documento HTML que será diretamente visível em sua página da web. -->
+    <!-- Uma class =(classe)  CSS é um atributo usado para definir um grupo de elementos HTML 
+  a fim de aplicar um estilo e formatação exclusivos a esses elementos com CSS. -->
     <div class="container mt-4 text-center">
         <div class="text-center">
             <h2 class="corEnade">Sobre o Projeto Simulado ENADE</h2>
-            <br>
+            <!-- As tags <h1> a <h6> são usadas para definir titulos HTML. 
+                <h1> define o cabeçalho mais importante. <h6> define o título menos importante. -->
+            <br> <!-- A tag <br> no documento HTML é usada para criar uma quebra de linha em um texto. -->
             <h5>
                 <p>
                     O desenvolvimento e disponibilização deste simulado foi decorrente de um Projeto de desenvolvimento
