--- a/Q10a.html
+++ b/Q10a.html
@@ -162,7 +162,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao10() {
+    function correçao10() { //correção da questão 10
         if (entrada != undefined) {
 
             entrada = getCheckado()
