--- a/Q16a.html
+++ b/Q16a.html
@@ -170,7 +170,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao16() {
+    function correçao16() { //correção da questão 16
         if (entrada != undefined) {
 
             entrada = getCheckado()
