--- a/Q18a.html
+++ b/Q18a.html
@@ -178,7 +178,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao18() {
+    function correçao18() { //correção da questão 18
         if (entrada != undefined) {
 
             entrada = getCheckado()
