--- a/Q7a.html
+++ b/Q7a.html
@@ -167,7 +167,7 @@ Ele informa ao navegador qual versão de HTML o documento está escrito, para qu
     var entrada;
     var correta;
 
-    function correçao7() {
+    function correçao7() { //correção da questão 7
         if (entrada != undefined) {
 
             entrada = getCheckado()
